fix: Properly require JSON files in package

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist/*",
-    "dist/config"
+    "dist/*"
   ],
   "scripts": {
     "build": "tsc",
