--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "tsc",
     "clean": "rm -rf dist",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\"",
-    "format": "prettier --write '**/*.{ts,md,yml,js}'",
+    "format": "npx prettier --write '**/*.{ts,md,yml,js}'",
     "release": "semantic-release"
   },
   "dependencies": {
@@ -33,6 +33,7 @@
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.28.0",
     "eslint-plugin-node": "^11.1.0",
+    "prettier": "^2.8.1",
     "semantic-release": "^19.0.5",
     "typescript": "^4.9.3"
   }
